--- a/css/style.css
+++ b/css/style.css
@@ -174,3 +174,66 @@ body {
 .card__btn {
     padding: 7px 64px;
 }
+.info{
+    margin: 48px 0 44px;
+
+}
+ .info__wrap{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+ }
+ .news {
+    max-width: 825px;
+    width: 100%;
+}
+.news__h {
+    font-family: 'Rubik', sans-serif;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 24px;
+    margin-bottom: 22px;
+    color: #686868;
+}
+
+
+.news__p {
+    margin-bottom: 15px;
+    background: #FFFFFF;
+    border-radius: 8px;
+    font-family: 'Rubik', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19px;
+    color: #545454;
+}
+
+.services{
+    max-width: 255px;
+    width: 100%;
+}
+.serv__card{
+    padding: 17px 15px;
+    background: #FFFFFF;
+    border-radius: 8px;
+    margin-bottom: 15px;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+.serv__h{
+    font-family: 'Rubik', sans-serif;
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 16px;
+    margin-bottom: 5px;
+}
+
+.serv__p {
+    font-family: 'Rubik', sans-serif;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 13px;
+    letter-spacing: 0em;
+    text-align: left;
+}
